force-app/main/default/objects/Apttus_Config2__CollaborationRequest__c/Apttus_Config2__CollaborationRequest__c.object-meta.xml
<CustomObject>
    <description>This object will persist information for quote collaboration tasks and will be used to relate the parent configurations and its related child configurations.</description>
    <label>Collaboration Request</label>
    <nameField>
        <displayFormat>CR-{0000000000}</displayFormat>
        <label>Collaboration Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collaboration Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>