force-app/main/default/objects/Apttus_Config2__CollaborationRequest__c/fields/Apttus_Config2__ChildConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ChildConfigurationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The child configuration associated with this collaboration task.</description>
    <inlineHelpText>The child configuration associated with this collaboration task.</inlineHelpText>
    <label>Child Product Configuration</label>
    <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
    <relationshipName>Collaboration_TasksChild</relationshipName>
    <type>Lookup</type>
</CustomField>