force-app/main/default/objects/Apttus_Config2__CollaborationRequest__c/fields/Apttus_Config2__CollaborationType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CollaborationType__c</fullName>
    <description>Specifies what type of collaboration this request is created for.</description>
    <inlineHelpText>Specifies what type of collaboration this request is created for.</inlineHelpText>
    <label>Collaboration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Peer-To-Peer</fullName>
                <default>true</default>
                <label>Peer-To-Peer</label>
            </value>
            <value>
                <fullName>Multi-Tier</fullName>
            </value>
            <value>
                <fullName>Digital Commerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>