force-app/main/default/objects/Apttus_Config2__CollaborationRequest__c/fields/Apttus_Config2__CompletionDueDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CompletionDueDate__c</fullName>
    <description>The date by which the child configuration should be completed and submitted for merging.</description>
    <inlineHelpText>The date by which the child configuration should be completed and submitted for merging.</inlineHelpText>
    <label>Completion Due Date</label>
    <type>Date</type>
</CustomField>