force-app/main/default/objects/Apttus_Config2__CollaborationRequest__c/fields/Apttus_Config2__ConfigureProducts__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConfigureProducts__c</fullName>
    <formula>IF( ($User.Id == OwnerId &amp;&amp; ! (ISPICKVAL(Apttus_Config2__Status__c, &quot;Cancelled&quot;) || ISPICKVAL(Apttus_Config2__Status__c, &quot;Deleted&quot;) || ISPICKVAL(Apttus_Config2__Status__c, &quot;Abandoned&quot;))),
        HYPERLINK(&quot;/apex/Apttus_Config2__CollabRequestInline?id=&quot;&amp;Id&amp;&quot;&amp;flow=ngcpq&quot; , IMAGE(&quot;/resource/Apttus_Config2__Button_Configure&quot;, &quot;Configure Products&quot;),&quot;_self&quot;),
        NULL
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Configure Products</label>
    <type>Text</type>
</CustomField>