force-app/main/default/objects/Apttus_Config2__CollaborationRequest__c/fields/Apttus_Config2__IsParentCartVisible__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsParentCartVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether the collaborator gets read-only access to the parent cart</description>
    <inlineHelpText>Specifies whether the collaborator gets read-only access to the parent cart</inlineHelpText>
    <label>Grant Access to Merge Cart (Read Only)</label>
    <type>Checkbox</type>
</CustomField>