force-app/main/default/objects/Apttus_Config2__CollaborationRequest__c/fields/Apttus_Config2__OrderDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OrderDate__c</fullName>
    <description>The order date</description>
    <inlineHelpText>The order date</inlineHelpText>
    <label>Order Date</label>
    <type>DateTime</type>
</CustomField>