force-app/main/default/objects/Apttus_Config2__CollaborationRequest__c/fields/Apttus_Config2__ParentBusinessObjectId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ParentBusinessObjectId__c</fullName>
    <description>Id of the parent business object</description>
    <inlineHelpText>Id of the parent business object</inlineHelpText>
    <label>Parent Business Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>