force-app/main/default/objects/Apttus_Config2__CollaborationRequest__c/fields/Apttus_Config2__ParentBusinessObjectType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ParentBusinessObjectType__c</fullName>
    <description>Type of the parent business object.</description>
    <inlineHelpText>Type of the parent business object.</inlineHelpText>
    <label>Parent Business Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Collaboration Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>