force-app/main/default/objects/Apttus_Config2__CollaborationRequest__c/fields/Apttus_Config2__ParentConfigRequestId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ParentConfigRequestId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Config Request record of Parent Cart</description>
    <inlineHelpText>Lookup to the Config Request record of Parent Cart</inlineHelpText>
    <label>Parent Config Request Id</label>
    <referenceTo>Apttus_Config2__TempObject__c</referenceTo>
    <relationshipLabel>Collaboration Requests</relationshipLabel>
    <relationshipName>CollaborationRequests</relationshipName>
    <type>Lookup</type>
</CustomField>