force-app/main/default/objects/Apttus_Config2__CollaborationRequest__c/fields/Apttus_Config2__ParentConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ParentConfigurationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent configuration for which this collaboration task is created.</description>
    <inlineHelpText>Enter the parent configuration id</inlineHelpText>
    <label>Parent Configuration</label>
    <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
    <relationshipName>Collaboration_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>