force-app/main/default/objects/Apttus_Config2__CollaborationRequest__c/fields/Apttus_Config2__PaymentTermId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PaymentTermId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the payment term associated with the order</description>
    <inlineHelpText>ID of the payment term associated with the order</inlineHelpText>
    <label>Payment Term</label>
    <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
    <relationshipLabel>DC Orders</relationshipLabel>
    <relationshipName>DCOrders</relationshipName>
    <type>Lookup</type>
</CustomField>