force-app/main/default/objects/Apttus_Config2__CollaborationRequest__c/fields/Apttus_Config2__PONumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PONumber__c</fullName>
    <description>The purchase order number</description>
    <inlineHelpText>The purchase order number</inlineHelpText>
    <label>PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>