force-app/main/default/objects/Apttus_Config2__CollaborationRequest__c/fields/Apttus_Config2__PriceListId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PriceListId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated price list</description>
    <inlineHelpText>ID of the associated price list</inlineHelpText>
    <label>Price List</label>
    <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
    <relationshipLabel>Collaboration Requests</relationshipLabel>
    <relationshipName>CollaborationRequests</relationshipName>
    <type>Lookup</type>
</CustomField>