force-app/main/default/objects/Apttus_Config2__CollaborationRequest__c/fields/Apttus_Config2__Priority__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Priority__c</fullName>
    <description>Holds the priority of the task, P1 being highest priority and P5 being lowest.</description>
    <inlineHelpText>Priority of the task, P1 being highest priority and P5 being lowest.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>P5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>