force-app/main/default/objects/Apttus_Config2__CollaborationRequest__c/fields/Apttus_Config2__ReadyForRevRecDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ReadyForRevRecDate__c</fullName>
    <description>The date when the order is ready for revenue recognition. The revenue schedules are created on this date.</description>
    <inlineHelpText>The date when the order is ready for revenue recognition. The revenue schedules are created on this date.</inlineHelpText>
    <label>Ready For Revenue Recognition Date</label>
    <type>DateTime</type>
</CustomField>