force-app/main/default/objects/Apttus_Config2__CollaborationRequest__c/fields/Apttus_Config2__RelatedOpportunityId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelatedOpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the related opportunity</description>
    <inlineHelpText>ID of the related opportunity</inlineHelpText>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>DC Quotes</relationshipLabel>
    <relationshipName>DCQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>