force-app/main/default/objects/Apttus_Config2__CollaborationRequest__c/fields/Apttus_Config2__StartDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__StartDate__c</fullName>
    <description>The date by which the child configuration should be started.</description>
    <inlineHelpText>The date by which the child configuration should be started.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>