force-app/main/default/objects/Apttus_Config2__CollaborationRequest__c/listViews/Apttus_Config2__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Config2__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Config2__StartDate__c</columns>
    <columns>Apttus_Config2__Priority__c</columns>
    <columns>Apttus_Config2__ParentConfigurationId__c</columns>
    <columns>Apttus_Config2__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>